fix menu description image on mobile

--- a/assets/scss/_pages.scss
+++ b/assets/scss/_pages.scss
@@ -296,6 +296,7 @@ section.jobs .job .hover {padding: 0; transition: opacity  .7s; max-height: 0; o
 
 .menu .listing h1 {font-size: 33px; font-family: "brandon-grotesque"; color: $pink; text-transform: uppercase; display: inline; }
 .menu .container p {font-size: 18px;}
+.menu .container p img { max-width: 100%; }
 
 .menu .listing h2 {display: inline; font-size: 18px;}
 
